# charles-r-earp.github.io

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.github/workflows/: deploy.yml
assets/: drafting_cropped.xcf  main.css
src/: main.rs
